--- a/matlab_archive/mylab2/mylab2_simulink_to_ros_ert_rtw/package.xml
+++ b/matlab_archive/mylab2/mylab2_simulink_to_ros_ert_rtw/package.xml
@@ -9,9 +9,11 @@
 
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>arduino_sub_pub</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>std_msgs</build_depend>
 
+  <run_depend>arduino_sub_pub</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
 </package>
