from linux : Ubuntu 16.04.1 LTS

--- a/zet_cetera/tmux_setting/.tmux.conf
+++ b/zet_cetera/tmux_setting/.tmux.conf
@@ -5,7 +5,10 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # Ctrl+a 를 prefix 로
 set -g prefix C-a
 unbind C-b
-bind C-a send-prefix
+#bind C-a send-prefix
+
+# prefix + C-a 키로 스크롤 옮기는 키 변경
+bind Up copy-mode
 
 # visual bell
 set-option -g visual-bell on
