--- a/zet_cetera/tmux_setting/.tmux.conf
+++ b/zet_cetera/tmux_setting/.tmux.conf
@@ -5,7 +5,8 @@ bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # Ctrl+a 를 prefix 로
 set -g prefix C-a
 unbind C-b
-#bind C-a send-prefix
+bind C-a send-prefix
+
 
 # prefix + C-a 키로 스크롤 옮기는 키 변경
 bind Up copy-mode
@@ -83,8 +84,8 @@ setw -g monitor-activity on
 bind-key v split-window -h
 bind-key s split-window -v
 
-bind-key j resize-pane -D 8
-bind-key k resize-pane -U 8
+bind-key j resize-pane -U 8
+bind-key k resize-pane -D 8
 bind-key h resize-pane -L 8
 bind-key l resize-pane -R 8
 
