--- a/zet_cetera/backup_files/backup_tmux/.tmux.conf
+++ b/zet_cetera/backup_files/backup_tmux/.tmux.conf
@@ -23,10 +23,10 @@ unbind '"'
 unbind '%'
 
 # 새 window 생성 때도 현재 cwd를 사용
-bind c new-window -c "#{pane_current_path}"
+bind a new-window -c "#{pane_current_path}"
 
 # 직전에 사용하던 윈도우 이동
-bind a last-window
+# bind a last-window
 
 # C-o, o 둘 다 pane이동으로. rotate는 안 쓰니까 C-p로 이동
 bind C-p rotate-window
