--- a/zet_cetera/backup_files/backup_tmux/.tmux.conf
+++ b/zet_cetera/backup_files/backup_tmux/.tmux.conf
@@ -100,11 +100,10 @@ bind-key M-l resize-pane -R
 #bind k select-pane -U
 #bind l select-pane -R
 
-# Use Alt-vim keys without prefix key to switch panes
-#bind -n M-h select-pane -L
-#bind -n M-j select-pane -D 
-#bind -n M-k select-pane -U
-#bind -n M-l select-pane -R
+bind -n M-S-Left swap-pane -L
+bind -n M-S-Down swap-pane -D 
+bind -n M-S-Up swap-pane -U
+bind -n M-S-Right swap-pane -R
 
 # Use Alt-arrow keys without prefix key to switch panes
 bind -n M-Left select-pane -L
