--- a/zet_cetera/backup_files/backup_tmux/.tmux.conf
+++ b/zet_cetera/backup_files/backup_tmux/.tmux.conf
@@ -84,8 +84,8 @@ setw -g monitor-activity on
 bind-key v split-window -h
 bind-key s split-window -v
 
-bind-key j resize-pane -U 8
-bind-key k resize-pane -D 8
+bind-key k resize-pane -U 8
+bind-key j resize-pane -D 8
 bind-key h resize-pane -L 8
 bind-key l resize-pane -R 8
 
