--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-    "python.pythonPath": "C:\\Users\\edward\\Anaconda3\\envs\\tf\\python.exe"
+    "python.pythonPath": "C:\\Users\\edward\\Anaconda3\\envs\\tf\\python.exe",
+    "files.associations": {
+        "random": "cpp",
+        "queue": "cpp",
+        "stack": "cpp"
+    }
 }
