180911 test.cpp changed && vscode settings has changed

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,11 @@
         "random": "cpp",
         "queue": "cpp",
         "stack": "cpp"
-    }
+    },
+    // Code Runner "CPP" 설정
+    "code-runner.executorMap": {
+        "cpp": "cd $dir && g++ $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt"
+    },
+    // Window 10 에서는 Default Shell 이 Powershell이기 때문에 cmd로 변경해야 정상적으로 실행 됨.
+    "terminal.integrated.shell.windows": "C:\\Windows\\System32\\cmd.exe"
 }
