--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,7 @@ zet_cetera/backup_files/backup_theme/Ultra-Flat-light/apps/scalable/Vbox.svg
 zet_cetera/backup_files/backup_theme/Ultra-Flat-light/apps/scalable/Thunar.svg
 zet_cetera/backup_files/backup_theme/Ultra-Flat-light/apps/scalable/VBox.svg
 zet_cetera/backup_files/backup_theme/Ultra-Flat-light/apps/scalable/flareGet.svg
+
+cpp_archive/test
+.vs/
+.vscode/
