--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "name": "(gdb) Launch",
             "type": "cppdbg",
             "request": "launch",
-            "program": "d:\\gitrepo\\lockdpwn\\cpp_archive\\test.exe",
+            "program": "e:\\gitrepo\\lockdpwn\\cpp_archive\\test.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
@@ -28,7 +28,7 @@
             "name": "(Windows) Launch",
             "type": "cppvsdbg",
             "request": "launch",
-            "program": "d:\\gitrepo\\lockdpwn\\cpp_archive\\test.exe",
+            "program": "e:\\gitrepo\\lockdpwn\\cpp_archive\\test.exe",
             "args": [],
             "stopAtEntry": false,
             "cwd": "${workspaceFolder}",
