--- a/cmake_archive/test_cmake/CMakeLists.txt
+++ b/cmake_archive/test_cmake/CMakeLists.txt
@@ -1,3 +1,4 @@
 find_package(Ceres REQUIRED)
+include_directories(${CERES_INCLUDE_DIRS})
 add_executable(test test.cpp)
-target_link_libraries(test ceres)
+target_link_libraries(test ${CERES_LIBRARIES})
