--- a/cmake_projects/opencv_example/CMakeLists.txt
+++ b/cmake_projects/opencv_example/CMakeLists.txt
@@ -4,5 +4,5 @@ project(opencv_test)
 
 find_package( OpenCV REQUIRED )
 
-add_executable(test src/test.cpp )
-target_link_libraries(test ${OpenCV_LIBS} )
+add_executable(test_opencv src/test.cpp )
+target_link_libraries(test_opencv ${OpenCV_LIBS} )
