--- a/cmake_projects/random_generation/CMakeLists.txt
+++ b/cmake_projects/random_generation/CMakeLists.txt
@@ -2,6 +2,9 @@ cmake_minimum_required(VERSION 2.6)
 
 add_compile_options("-std=c++11")
 
+set(CMAKE_BUILD_TYPE Debug)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O3")
+
 project(random_generation)
 
 # include_directories(${INCLUDE_DIRECTORIES} ${Boost_INCLUDE_DIRS})
