--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "python.pythonPath": "C:\\Users\\edward\\Anaconda3\\python.exe",
+    "python.pythonPath": "C:\\Users\\edward\\Anaconda3\\envs\\tf\\python.exe",
     "files.associations": {
         "random": "cpp",
         "queue": "cpp",
