--- a/cmake_projects/opengl_example/CMakeLists.txt
+++ b/cmake_projects/opengl_example/CMakeLists.txt
@@ -34,12 +34,18 @@ if(WIN32)
 	set(CMAKE_PREFIX_PATH "C:/Program Files (x86)/GLFW/lib/cmake/glfw3")
 	set(CMAKE_LIBRARY_PATH "C:/Program Files (x86)/GLFW/lib")
 endif(WIN32)
+
 #--- Find GLFW
 find_package(glfw3 REQUIRED)
 if (glfw3_FOUND)
-	include_directories("C:/Program Files (x86)/GLFW/include")
-	link_libraries("C:/Program Files (x86)/GLFW/lib")
-	set(glfw3_LIBRARIES "C:/Program Files (x86)/GLFW/lib/glfw3.lib")
+	if(WIN32)
+		include_directories("C:/Program Files (x86)/GLFW/include")
+		link_libraries("C:/Program Files (x86)/GLFW/lib")
+		set(glfw3_LIBRARIES "C:/Program Files (x86)/GLFW/lib/glfw3.lib")
+	else()
+		include_directories(${glfw3_INCLUDE_DIRS})
+		link_libraries(${glfw3_LIBRARIES})
+	endif()
 endif()
 
 #--- Find OpenGL
@@ -60,28 +66,28 @@ add_executable(glfw_example
 	)
 
 if(WIN32)
-target_link_libraries(opengl_example 
-	${OPENGL_LIBRARIES} 
-	${FREEGLUT_LIBRARIES} 
-	${GLEW_LIBRARIES}
-	)
-target_link_libraries(glfw_example 
-	${OPENGL_LIBRARIES} 
-	${FREEGLUT_LIBRARIES} 
-	${GLEW_LIBRARIES}
-	${glfw3_LIBRARIES}
-	)
+	target_link_libraries(opengl_example 
+		${OPENGL_LIBRARIES} 
+		${FREEGLUT_LIBRARIES} 
+		${GLEW_LIBRARIES}
+		)
+	target_link_libraries(glfw_example 
+		${OPENGL_LIBRARIES} 
+		${FREEGLUT_LIBRARIES} 
+		${GLEW_LIBRARIES}
+		${glfw3_LIBRARIES}
+		)
 else()
-target_link_libraries(opengl_example 
-	${OPENGL_LIBRARIES} 
-	${GLUT_LIBRARIES} 
-	${GLEW_LIBRARIES}
-	)
-target_link_libraries(glfw_example 
-	${OPENGL_LIBRARIES} 
-	${GLUT_LIBRARIES} 
-	${GLEW_LIBRARIES}
-	${glfw3_LIBRARIES}
-	)
+	target_link_libraries(opengl_example 
+		${OPENGL_LIBRARIES} 
+		${GLUT_LIBRARIES} 
+		${GLEW_LIBRARIES}
+		)
+	target_link_libraries(glfw_example 
+		${OPENGL_LIBRARIES} 
+		${GLUT_LIBRARIES} 
+		${GLEW_LIBRARIES}
+		glfw
+		)
 endif()
 
