--- a/cmake_projects/g2o_examples/CMakeLists.txt
+++ b/cmake_projects/g2o_examples/CMakeLists.txt
@@ -25,12 +25,12 @@ target_link_libraries(curve_fitting
   ${OpenCV_LIBS}
   )
 
-# add_executable(slam_toy_example
-#   src/slam_toy_example.cpp)
-#
-# target_link_libraries(slam_toy_example
-#   g2o_core
-#   g2o_stuff
-#   ${EIGEN3_LIBRARIES}
-#   ${OpenCV_LIBS}
-#   )
+add_executable(slam_toy_example
+  src/slam_toy_example.cpp)
+
+target_link_libraries(slam_toy_example
+  g2o_core
+  g2o_stuff
+  ${EIGEN3_LIBRARIES}
+  ${OpenCV_LIBS}
+  )
