--- a/cmake_projects/g2o_examples/CMakeLists.txt
+++ b/cmake_projects/g2o_examples/CMakeLists.txt
@@ -3,11 +3,10 @@ project(g2o_examples)
 
 set(CMAKE_BUILD_TYPE "Release")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
 
 find_package(g2o REQUIRED)
-include_directories(
-  ${G2O_INCLUDE_DIRS}
-  )
+include_directories(${G2O_INCLUDE_DIRS})
 
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIRS})
@@ -15,10 +14,10 @@ include_directories(${EIGEN3_INCLUDE_DIRS})
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 
-add_executable(curve_fitting
-  src/curve_fitting.cpp)
+add_executable(circle_fitting
+  src/circle_fitting.cpp)
 
-target_link_libraries(curve_fitting
+target_link_libraries(circle_fitting
   g2o_core
   g2o_stuff
   ${EIGEN3_LIBRARIES}
