--- a/cmake_projects/g2o_examples/CMakeLists.txt
+++ b/cmake_projects/g2o_examples/CMakeLists.txt
@@ -3,10 +3,8 @@ project(g2o_examples)
 
 set(CMAKE_BUILD_TYPE "Release")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/cmake_modules)
+list(APPEND CMAKE_MODULE_PATH ${PROJECT_SOURCE_DIR}/thirdparty/g2o/cmake_modules)
 
-find_package(g2o REQUIRED)
-include_directories(${G2O_INCLUDE_DIRS})
 
 find_package(Eigen3 REQUIRED)
 include_directories(${EIGEN3_INCLUDE_DIRS})
@@ -14,22 +12,26 @@ include_directories(${EIGEN3_INCLUDE_DIRS})
 find_package(OpenCV REQUIRED)
 include_directories(${OpenCV_INCLUDE_DIRS})
 
+include_directories(
+	${PROJECT_SOURCE_DIR}/thirdparty/g2o
+	)
+add_subdirectory(thirdparty/g2o)
+
 add_executable(circle_fitting
-  src/circle_fitting.cpp)
+	src/circle_fitting.cpp
+	)
 
 target_link_libraries(circle_fitting
-  g2o_core
-  g2o_stuff
-  ${EIGEN3_LIBRARIES}
-  ${OpenCV_LIBS}
-  )
+	${EIGEN3_LIBS}
+	${OpenCV_LIBS}
+	g2o
+	)
 
 add_executable(slam_toy_example
-  src/slam_toy_example.cpp)
+	src/slam_toy_example.cpp)
 
 target_link_libraries(slam_toy_example
-  g2o_core
-  g2o_stuff
-  ${EIGEN3_LIBRARIES}
-  ${OpenCV_LIBS}
-  )
+	${EIGEN3_LIBS}
+	${OpenCV_LIBS}
+	g2o
+	)
