--- a/cmake_projects/eigen_example/CMakeLists.txt
+++ b/cmake_projects/eigen_example/CMakeLists.txt
@@ -8,6 +8,10 @@ find_package(Eigen3 3.1.0 REQUIRED)
 
 include_directories(${EIGEN3_INCLUDE_DIRS})
 
-add_executable(eigen_test eigen_test.cpp)
+add_executable(eigen_test 
+  eigen_test.cpp
+)
 
-target_link_libraries(eigen_test ${EIGEN3_LIBS})
+target_link_libraries(eigen_test 
+  ${EIGEN3_LIBS}
+)
