--- a/cmake_projects/opencv_example/CMakeLists.txt
+++ b/cmake_projects/opencv_example/CMakeLists.txt
@@ -7,11 +7,17 @@ find_package( Eigen3 REQUIRED )
 
 include_directories(${EIGEN3_INCLUDE_DIRS})
 
-# add_executable(test_opencv src/test.cpp )
-# target_link_libraries(test_opencv ${OpenCV_LIBS} )
+add_executable(test
+  src/test.cpp
+  )
+target_link_libraries(test
+  ${OpenCV_LIBS}
+  )
 
-add_executable(test_opencv src/test_access.cpp )
-target_link_libraries(test_opencv
+add_executable(test_access
+  src/test_access.cpp
+  )
+target_link_libraries(test_access
   ${OpenCV_LIBS}
   ${EIGEN3_LIBS}
   )
