--- a/zet_cetera/configure_files/libinput-gestures.conf
+++ b/zet_cetera/configure_files/libinput-gestures.conf
@@ -21,4 +21,4 @@ gesture swipe down 4 xdotool key ctrl+super+d
 gesture swipe right 4 xdotool key alt+Right
 gesture swipe left 4 xdotool key alt+Left
 
-gesture pinch out	xdotool key super+s
+# gesture pinch out	xdotool key super+s
