--- a/zet_cetera/configure_files/libinput-gestures.conf
+++ b/zet_cetera/configure_files/libinput-gestures.conf
@@ -18,7 +18,7 @@ gesture swipe left 3 xdotool key ctrl+alt+Right
 
 gesture swipe up 4 xdotool key super+w
 gesture swipe down 4 xdotool key super+s
-gesture swipe right 4 xdotool key alt+Right
-gesture swipe left 4 xdotool key alt+Left
+gesture swipe right 4 xdotool key alt+Left
+gesture swipe left 4 xdotool key alt+Right
 
 # gesture pinch out	xdotool key super+s
