--- a/cmake_projects/opencv_example/CMakeLists.txt
+++ b/cmake_projects/opencv_example/CMakeLists.txt
@@ -7,10 +7,10 @@ find_package( Eigen3 REQUIRED )
 
 include_directories(${EIGEN3_INCLUDE_DIRS})
 
-add_executable(test
-  src/test.cpp
+add_executable(test_cv
+  src/test_cv.cpp
   )
-target_link_libraries(test
+target_link_libraries(test_cv
   ${OpenCV_LIBS}
   )
 
@@ -18,6 +18,14 @@ add_executable(test_access
   src/test_access.cpp
   )
 target_link_libraries(test_access
+  ${OpenCV_LIBS}
+  ${EIGEN3_LIBS}
+  )
+
+add_executable(disparity
+  src/disparity.cpp
+  )
+target_link_libraries(disparity
   ${OpenCV_LIBS}
   ${EIGEN3_LIBS}
   )
