--- a/cmake_projects/opencv_example/CMakeLists.txt
+++ b/cmake_projects/opencv_example/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 2.8)
 
+set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11")
+
 project(opencv_test)
 
 find_package( OpenCV REQUIRED )
