--- a/zet_cetera/configure_files/libinput-gestures.conf
+++ b/zet_cetera/configure_files/libinput-gestures.conf
@@ -21,4 +21,8 @@ gesture swipe down 4 xdotool key super+s
 gesture swipe right 4 xdotool key alt+Left
 gesture swipe left 4 xdotool key alt+Right
 
+# zoom
+gesture pinch   in    2  xdotool key ctrl+minus
+gesture pinch   out   2  xdotool key ctrl+plus
+
 # gesture pinch out	xdotool key super+s
