--- a/cmake_projects/eigen_example/CMakeLists.txt
+++ b/cmake_projects/eigen_example/CMakeLists.txt
@@ -1,6 +1,8 @@
 cmake_minimum_required(VERSION 3.5)
 project(eigen_test)
 
+set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11")
+
 IF(NOT CMAKE_BUILD_TYPE)
   SET(CMAKE_BUILD_TYPE Release)
 ENDIF()
@@ -22,3 +24,10 @@ target_link_libraries(eigen_test
 #target_link_libraries(quaternion_test 
 #  ${EIGEN3_LIBS}
 #)
+
+add_executable(rotmat_to_quat
+	src/rotmat_to_quat.cpp
+)
+target_link_libraries(rotmat_to_quat
+ ${EIGEN3_LIBS}
+)
