--- a/cmake_projects/opencv_example/CMakeLists.txt
+++ b/cmake_projects/opencv_example/CMakeLists.txt
@@ -52,3 +52,10 @@ add_executable(morphology
 target_link_libraries(morphology
   ${OpenCV_LIBS}
   )
+
+add_executable(demo
+  src/demo.cpp
+  )
+target_link_libraries(demo
+  ${OpenCV_LIBS}
+  )
