--- a/zet_cetera/configure_files/libinput-gestures.conf
+++ b/zet_cetera/configure_files/libinput-gestures.conf
@@ -11,15 +11,17 @@
 swipe_threshold 0
 
 # Gestures
-gesture swipe up 3 xdotool key ctrl+alt+Down
-gesture swipe down 3 xdotool key ctrl+alt+Up
-gesture swipe right 3 xdotool key ctrl+alt+Left
-gesture swipe left 3 xdotool key ctrl+alt+Right
-
 gesture swipe up 4 xdotool key super+w
 gesture swipe down 4 xdotool key super+s
-gesture swipe right 4 xdotool key alt+Left
-gesture swipe left 4 xdotool key alt+Right
+gesture swipe right 4 xdotool key ctrl+alt+Left
+gesture swipe left 4 xdotool key ctrl+alt+Right
+
+# gesture swipe right 3 xdotool key alt+Left
+# gesture swipe left 3 xdotool key alt+Right
+
+gesture swipebegin all 3 xdotool key alt+F7
+gesture swipeend all 3 xdotool key alt+F7
+gesture swipeupdate all 3 xdotool mousemove_relative -- x y
 
 # zoom
 gesture pinch   in    2  xdotool key ctrl+minus
