enable three finger drag

--- a/zet_cetera/configure_files/libinput-gestures.conf
+++ b/zet_cetera/configure_files/libinput-gestures.conf
@@ -19,6 +19,11 @@ gesture swipe left 4 xdotool key ctrl+alt+Right
 # gesture swipe right 3 xdotool key alt+Left
 # gesture swipe left 3 xdotool key alt+Right
 
+# Three finger drag (need to unofficial branch)
+# gesture swipebegin all 3 xdotool key alt+F7
+# gesture swipeend all 3 xdotool key alt+F7
+# gesture swipeupdate all 3 xdotool mousemove_relative -- x y
+# gesture swipeupdate all 3 xdotool getactivewindow windowmove --relative -- x y
 gesture swipebegin all 3 xdotool key alt+F7
 gesture swipeend all 3 xdotool key alt+F7
 gesture swipeupdate all 3 xdotool mousemove_relative -- x y
