update three finger drag

--- a/zet_cetera/configure_files/libinput-gestures.conf
+++ b/zet_cetera/configure_files/libinput-gestures.conf
@@ -20,13 +20,14 @@ gesture swipe left 4 xdotool key ctrl+alt+Right
 # gesture swipe left 3 xdotool key alt+Right
 
 # Three finger drag (need to unofficial branch)
-# gesture swipebegin all 3 xdotool key alt+F7
-# gesture swipeend all 3 xdotool key alt+F7
-# gesture swipeupdate all 3 xdotool mousemove_relative -- x y
-# gesture swipeupdate all 3 xdotool getactivewindow windowmove --relative -- x y
-gesture swipebegin all 3 xdotool key alt+F7
-gesture swipeend all 3 xdotool key alt+F7
+#https://github.com/daveriedstra/libinput-gestures/blob/three-finger-drag/libinput-gestures.conf 
+gesture swipebegin all 3 xdotool mousedown 1
+gesture swipeend all 3 xdotool mouseup 1
 gesture swipeupdate all 3 xdotool mousemove_relative -- x y
+
+gesture pinchbegin all 3 xdotool mousedown 1
+gesture pinchend all 3 xdotool mouseup 1
+gesture pinchupdate all 3 xdotool mousemove_relative -- x y
 
 # zoom
 gesture pinch   in    2  xdotool key ctrl+minus
