--- a/cmake_projects/cpp_examples/CMakeLists.txt
+++ b/cmake_projects/cpp_examples/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 2.4)
 add_compile_options(-std=c++11)
 
 add_executable(pure_virtual_class
-  src/pure_virtual_class.cpp
+  src/pure_virtual_class.cc
   )
 target_link_libraries(pure_virtual_class
   )
