--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,10 +14,10 @@
         "iostream": "cpp",
         "deque": "cpp"
     },
-    // Code Runner "CPP" 설정
+    // Code Runner "CPP" setting
     "code-runner.executorMap": {
         "cpp": "cd $dir && g++ $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt"
     },
-    // Window 10 에서는 Default Shell 이 Powershell이기 때문에 cmd로 변경해야 정상적으로 실행 됨.
+    // Windows 10 uses powershell as a default shell, so we need to change it to cmd.
     "terminal.integrated.shell.windows": "C:\\Windows\\System32\\cmd.exe"
 }
