modify vtk examples

--- a/cmake_projects/vtk_examples/CMakeLists.txt
+++ b/cmake_projects/vtk_examples/CMakeLists.txt
@@ -7,29 +7,34 @@ find_package(VTK 6 REQUIRED)
 
 message (STATUS "VTK_VERSION: ${VTK_VERSION}")
 
-if (VTK_VERSION VERSION_LESS "8.90.0")
-  # old system
-  include(${VTK_USE_FILE})
-  add_executable(CylinderExample
-    MACOSX_BUNDLE
-    src/CylinderExample.cxx
-    )
-  target_link_libraries(CylinderExample
-    PRIVATE
-    ${VTK_LIBRARIES})
-else ()
-  # include all components
-  add_executable(CylinderExample
-    MACOSX_BUNDLE
-    src/CylinderExample.cxx
-    )
-  target_link_libraries(CylinderExample
-    PRIVATE
-    ${VTK_LIBRARIES}
-    )
-  # vtk_module_autoinit is needed
-  vtk_module_autoinit(
-    TARGETS CylinderExample
-    MODULES ${VTK_LIBRARIES}
-    )
-endif ()
+include(${VTK_USE_FILE})
+
+# CylinderExample
+add_executable(CylinderExample
+  MACOSX_BUNDLE
+  src/CylinderExample.cxx
+  )
+target_link_libraries(CylinderExample
+  PRIVATE
+  ${VTK_LIBRARIES}
+  )
+
+# HighlightSelectedPoints
+add_executable(HighlightSelectedPoints
+  MACOSX_BUNDLE
+  src/HighlightSelectedPoints.cxx
+  )
+target_link_libraries(HighlightSelectedPoints
+  PRIVATE
+  ${VTK_LIBRARIES}
+  )
+
+
+# =========================We're currently using vtk 6.x.==============================
+# if (NOT VTK_VERSION VERSION_LESS "8.90.0")
+#   # vtk_module_autoinit is needed, if VTK version is > 8.9
+#   vtk_module_autoinit(
+#     TARGETS CylinderExample
+#     MODULES ${VTK_LIBRARIES}
+#     )
+# endif ()
