--- a/cmake_projects/eigen_example/CMakeLists.txt
+++ b/cmake_projects/eigen_example/CMakeLists.txt
@@ -3,6 +3,9 @@ project(eigen_test)
 
 set(CMAKE_CXX_FLAGS ${CMAKE_CXX_FLAGS} "-std=c++11")
 
+find_package(Boost)
+include_directories(${Boost_INCLUDE_DIRS})
+
 IF(NOT CMAKE_BUILD_TYPE)
   SET(CMAKE_BUILD_TYPE Release)
 ENDIF()
