--- a/cmake_projects/opencv_example/CMakeLists.txt
+++ b/cmake_projects/opencv_example/CMakeLists.txt
@@ -9,23 +9,23 @@ find_package( Eigen3 REQUIRED )
 
 include_directories(${EIGEN3_INCLUDE_DIRS})
 
-add_executable(test_cv
-  src/test_cv.cpp
+add_executable(test
+  src/test.cc
   )
-target_link_libraries(test_cv
+target_link_libraries(test
   ${OpenCV_LIBS}
   )
 
-add_executable(test_access
-  src/test_access.cpp
+add_executable(cv_mat_access
+  src/cv_mat_access.cc
   )
-target_link_libraries(test_access
+target_link_libraries(cv_mat_access
   ${OpenCV_LIBS}
   ${EIGEN3_LIBS}
   )
 
 add_executable(disparity
-  src/disparity.cpp
+  src/disparity.cc
   )
 target_link_libraries(disparity
   ${OpenCV_LIBS}
@@ -33,29 +33,36 @@ target_link_libraries(disparity
   )
 
 add_executable(findchessboard
-  src/findchessboard.cpp
+  src/findchessboard.cc
   )
 target_link_libraries(findchessboard
   ${OpenCV_LIBS}
   )
 
 add_executable(extract_rgb
-  src/extract_rgb.cpp
+  src/extract_rgb.cc
   )
 target_link_libraries(extract_rgb
   ${OpenCV_LIBS}
   )
 
 add_executable(morphology
-  src/morphology.cpp
+  src/morphology.cc
   )
 target_link_libraries(morphology
   ${OpenCV_LIBS}
   )
 
 add_executable(demo
-  src/demo.cpp
+  src/demo.cc
   )
 target_link_libraries(demo
+  ${OpenCV_LIBS}
+  )
+
+add_executable(patch_comparison
+  src/patch_comparison.cc
+  )
+target_link_libraries(patch_comparison
   ${OpenCV_LIBS}
   )
